[gd_scene load_steps=10 format=2]

[ext_resource path="res://Player_stuff/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://NewPlatform.tscn" type="PackedScene" id=2]
[ext_resource path="res://Rush_platform.gd" type="Script" id=3]
[ext_resource path="res://Rush/BOSS.gd" type="Script" id=4]
[ext_resource path="res://Born2bSportyV2.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Player_stuff/Hp Bar frame.png" type="Texture" id=6]
[ext_resource path="res://Player_stuff/Hp Bar.png" type="Texture" id=7]

[sub_resource type="Animation" id=2]
resource_name = "intro"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/text:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.4, 2.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 5 )

[node name="Rush_platform" type="Node2D"]
script = ExtResource( 3 )

[node name="NewPlatform" parent="." instance=ExtResource( 2 )]
modulate = Color( 0.709804, 0.12549, 0.94902, 1 )
position = Vector2( -86.5999, 195.787 )
scale = Vector2( 0.395117, 0.383972 )

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 348.049, 194.47 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 1.3, 1.3 )

[node name="BOSS" type="KinematicBody2D" parent="."]
collision_layer = 4
script = ExtResource( 4 )

[node name="Rush_wait" type="Timer" parent="BOSS"]
one_shot = true

[node name="default" type="Timer" parent="BOSS"]
one_shot = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BOSS"]
polygon = PoolVector2Array( -25.2205, -125.654, -64.8058, -101.142, -109.353, -91.5244, -108.532, -69.1876, -128.402, -22.4725, -105.384, 2.92595, -64.1118, 10.863, -22.7609, 8.1749, 4.14645, 7.68816, 12.5567, -28.8246, 16.8456, -49.4583, 3.35275, -82.7937 )

[node name="Area2D" type="Area2D" parent="BOSS"]
position = Vector2( -321.024, -29.184 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="BOSS/Area2D"]
position = Vector2( 319.861, 22.2236 )
polygon = PoolVector2Array( -16.3133, -152.937, -69.7069, -114.226, -141.788, -118.231, -124.435, -54.1586, -169.82, 1.90463, -104.413, 5.90915, -61.6978, 68.6466, -22.9875, 23.2621, 25.0668, 40.615, 38.4152, -19.4528, 81.13, -62.1677, 9.04865, -95.5387 )

[node name="Polygon2D" type="Polygon2D" parent="BOSS"]
position = Vector2( -0.464844, -8.12956 )
color = Color( 0.0588235, 0.643137, 0.0705882, 1 )
polygon = PoolVector2Array( -17.6481, -154.272, -68.372, -115.561, -141.788, -118.231, -123.1, -55.4935, -167.15, -0.765045, -108.417, 7.24399, -63.0327, 69.9815, -24.3223, 25.9317, 22.3971, 41.9498, 34.4106, -20.7876, 79.7952, -62.1677, 7.71381, -92.869 )

[node name="Timer" type="Timer" parent="BOSS"]

[node name="Pos1" type="Position2D" parent="BOSS"]
position = Vector2( -33.3354, -98.4189 )

[node name="Pos2" type="Position2D" parent="BOSS"]
position = Vector2( -55.5591, -4.76221 )

[node name="HP_bar" type="TextureProgress" parent="BOSS"]
margin_left = -154.597
margin_top = -199.787
margin_right = 45.4031
margin_bottom = -159.787
value = 100.0
texture_over = ExtResource( 6 )
texture_progress = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="a" type="AnimationPlayer" parent="."]
anims/intro = SubResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="text" type="RichTextLabel" parent="CanvasLayer"]
margin_left = 94.2869
margin_top = 85.3071
margin_right = 969.287
margin_bottom = 512.307
custom_fonts/normal_font = SubResource( 1 )
text = "BOSS TIME!!!!
RUMBLER RUSHER

Watch out when he STOPS"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="dead" from="BOSS" to="." method="_on_BOSS_dead"]
[connection signal="timeout" from="BOSS/default" to="BOSS" method="_on_default_timeout"]
[connection signal="body_entered" from="BOSS/Area2D" to="BOSS" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="BOSS/Timer" to="BOSS" method="_on_Timer_timeout"]
